--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
                 </div>
                 <div class="img-box">
                     <img v-bind:src="imageSources[indexImage]" alt="">
+                    <div class="bullets">
+                        <i  v-for="i in imageSources.length"
+                            :class="i -1 == indexImage ? 'fas' : 'far'"
+                            class="fa-circle"></i>
+                    </div>
                 </div>
                 <div class="next">
                     <i @click="nextImg" class="fas fa-arrow-right fa-3x"></i>
